option('iconv_pkgconfig', type : 'feature', value : 'auto', description : 'Search for iconv with pkg-config or equivalent')
option('docs', type : 'feature', value : 'auto', description : 'Build docs')
option('docsdir', type : 'string', value : 'share/doc/datrie', description : 'Where to install the doxygen-generated HTML doc')
