pkgincludedir = $(includedir)/datrie

pkginclude_HEADERS =	\
	typedefs.h	\
	triedefs.h	\
	trie.h		\
	sb-trie.h

lib_LTLIBRARIES = libdatrie.la

libdatrie_la_SOURCES =	\
	typedefs.h	\
	triedefs.h	\
	fileutils.h	\
	fileutils.c	\
	darray.h	\
	darray.c	\
	tail.h		\
	tail.c		\
	trie.h		\
	trie.c		\
	alpha-map.h	\
	alpha-map.c	\
	sb-trie.h	\
	sb-trie.c

